--- a/The Game/fonts/gamefont.css
+++ b/The Game/fonts/gamefont.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: GameFont;
-    src: url("Delius-Regular.ttf");
+    src: url("AtlantisInternational-jen0.ttf");
 }
 
 .IIV::-webkit-media-controls-play-button,
